2005-03-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.4.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	  Release of gst-ffmpeg 0.8.4 "Mellow on my fingers".

2005-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	  releasing plugins 0.8.8

2005-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.8.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  new plugins release notes

2005-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gstreamer/0.8.9.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing core 0.8.9

2005-01-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/tasks/gstreamer.xml:
	  Add some more notes on XML.

2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/tasks/code.xml:
	* src/htdocs/tasks/gnome.xml:
	* src/htdocs/tasks/gstreamer.xml:
	* src/htdocs/tasks/people.xml:
	  Add some new 'simple' tasks (people asked for them).

2005-01-20  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* src/htdocs/documentation/index.xml:
	* src/htdocs/news/news.xml:
	  fix link to new licensing page

2005-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/Makefile.am:
	* src/htdocs/documentation/licensing.xml:
	* src/htdocs/documentation/licensingfaq.xml:
	  remove faq here and point to faq in faq.  faq off.

2005-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	  releasing 0.8.7

2005-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.7.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  release notes for gst-plugins 0.8.7

2004-12-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
