@@ -1,3 +1,6 @@
 * write a status page
 * write a people page
 * xslt-ize module page
+  (it is, the documantation page is not!)
+* add page for presenations, publications etc. (documentation?)
+
