@@ -13,7 +13,7 @@
   <body>
 <h1>Documentation</h1>
 
-<table width="100%" border="1">
+<table width="95%" border="1" cellspacing="0" cellpadding="2">
 <tr>
  <th>document</th>
  <th colspan="3">HEAD</th>
